--- a/src/Pages/home.css
+++ b/src/Pages/home.css
@@ -10,3 +10,17 @@
     display: flex;
 
 }
+.suggestions-button {
+  position: absolute;
+  left: 900px;
+  top: 50px;
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #3498db;
+    color: white;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
